# pursuit

./: .gitignore  Dataframe Construction.ipynb  MATLAB Import.ipynb  May.ipynb  May_2.ipynb  NB.ipynb  README.md  Target Distance Calculations2.ipynb  Target Distance Coding.ipynb  Tuning Curves.ipynb  environment.yml  pyproject.toml  requirements.txt
.ipynb_checkpoints/: May-checkpoint.ipynb  May_2-checkpoint.ipynb  README-checkpoint.md  Untitled-checkpoint.ipynb  requirements-checkpoint.txt  setup-checkpoint.py
pursuit/: file_reader.py
pursuit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pursuit_functions/: __init__.py  df_utils.py  feature_extraction.py  file_reader.py  index_utils.py  model.py  plot.py  tuning.py
pursuit_functions/.ipynb_checkpoints/: __init__-checkpoint.py  feature_extraction-checkpoint.py
