[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pursuit"
version = "0.0.1"
description = "Tools for analyzing pursuit experiment data"
authors = [{ name = "bigbrainmay", email = "bigbrainmay@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">3.12.9"
dependencies = [
    "jupyterlab==4.3.5",
    "pathlib==1.0.1",
    "scipy==1.15.1",
    "pandas==2.2.3",
    "numpy==2.2.2",
    "matplotlib==3.10.0",
    "pyarrow==19.0.1",
    "seaborn==0.13.2",
    "matplotlib==3.10.0",
    "scikit-learn==1.6.1",
    "xgboost==3.0.0",
    "tqdm==4.67.1",
    "polars==1.33.0"
]

[project.urls]
Homepage = "https://github.com/bigbrainmay/pursuit"

[tool.setuptools]
packages = ["pursuit_functions"]

